sumo/tests/traci/ChangeVehicleValue/ChangeTarget/InvalidNodeId/net_state.traci
<?xml version="1.0"?>

<!-- generated on 03/19/10 11:15:57 by SUMO sumo Version dev-SVN-r8163
<configuration>

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="routes.rou.xml"/>
    </input>

    <output>
        <netstate-dump value="netstate_dump.xml"/>
    </output>

    <report>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="8817"/>
        <penetration value="1"/>
    </traci_server>

</configuration>
-->

<sumo-netstate>
    <timestep time="0.00">
        <edge id="e_m5">
            <lane id="e_m5_0">
                <vehicle id="veh0" pos="0.00" speed="0.00"/>
            </lane>
            <lane id="e_m5_1"/>
            <lane id="e_m5_2"/>
        </edge>
    </timestep>
    <timestep time="1.00">
        <edge id="e_m5">
            <lane id="e_m5_0">
                <vehicle id="veh0" pos="0.45" speed="0.45"/>
            </lane>
            <lane id="e_m5_1"/>
            <lane id="e_m5_2"/>
        </edge>
    </timestep>
    <timestep time="2.00">
        <edge id="e_m5">
            <lane id="e_m5_0">
                <vehicle id="veh0" pos="1.41" speed="0.96"/>
            </lane>
            <lane id="e_m5_1"/>
            <lane id="e_m5_2"/>
        </edge>
    </timestep>
</sumo-netstate>
